divs overlap fix

--- a/main-style.css
+++ b/main-style.css
@@ -67,7 +67,7 @@ img {
 
 div.content{
   float:left;
-  width:1700px;
+  width:2000px;
   height:550px;
 }
 
